# Ecommerce

./: .gitignore  README.md  pyproject.toml
ecommerce_api/: main.py  schemas.py
ecommerce_api/json/: carts.json  products.json  users.json
ecommerce_api/routes/: auth.py  carts.py  products.py
